chore(auth); check style